--- a/web/src/style.css
+++ b/web/src/style.css
@@ -2698,7 +2698,7 @@ th:nth-child(6) {
 }
 
 #ocrResultPanel {
-    /* Panel klebt rechts neben dem Video */
+    /* Ergebnis-Panel klebt fest rechts neben dem Video */
     position: absolute;
     top: 0;
     right: 0;
@@ -2728,5 +2728,12 @@ th:nth-child(6) {
 /* Erst sichtbar, wenn OCR aktiv ist */
 #videoPlayerSection.ocr-active #ocrResultPanel {
     display: block;
+}
+
+/* damit das Panel nicht unter die Steuerleiste reicht */
+.player-controls {
+    position: sticky;
+    bottom: 0;
+    z-index: 5;
 }
 
